[logback] don't use deprecated constructor
Signed-off-by: Raymond Augé <raymond.auge@liferay.com>